# youtube-metadata-fetcher

./: .gitignore  README.md  pyproject.toml
youtube_metadata_fetcher/: main.py  test.py
